kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: site
  namespace: site
  labels:
    name: site
    role: web
spec:
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      name: site
      labels:
        name: site
        role: web
    spec:
      containers:
        - image: creasty/site:latest
          name: site
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: ping
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          ports:
            - containerPort: 8080
