kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: site
  labels:
    name: site
    role: web
spec:
  type: NodePort
  selector:
    name: site
    role: web
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
