kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site
  namespace: site
  annotations:
    kubernetes.io/ingress.global-static-ip-name: creasty-com
spec:
  tls:
    - secretName: tls
  backend:
    serviceName: site
    servicePort: 80
